src/components/about/About.module.scss
.about {
  display: flex;
  flex-flow: column;
  align-items: center;
  margin: auto;
  // padding: 0, 2em, 0, 0;
  p,
  h2,
  .skills {
    width: 95%;
  }
  h1 {
    font-size: 1.5em;
    text-transform: uppercase;
  }
  img {
    width: 10vw;
    height: auto;
    border-radius: 50%;
  }
  .links {
    list-style-type: none;
    padding: 0em;
    li {
      display: inline-block;
      margin: 0 1em 0 1em;
    }
  }
  .skills {
    align-self: center;

    li {
      display: inline-block;
      width: 45%;
      padding: 1em 0em 1em 0em;
    }
  }
  .logo {
    width: 1em;
    height: auto;
  }
}

@media (min-width: 700px) {
  .about {
    p,
    h2,
    .skills {
      width: 65%;
    }
    .skills li {
      width: 29%;
      // margin: 0 1em 0 1em;
    }
  }
}

